WIP
Going well up to a crash in SSL_do_handshake in libcrypto.